Enable Java 17 preview features